--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "express-ejs-layouts": "^2.5.1",
-    "mongoose": "^6.0.12"
+    "method-override": "^3.0.0",
+    "mongoose": "^6.0.12",
+    "multer": "^1.4.3"
   },
   "devDependencies": {
     "dotenv": "^10.0.0",
