--- a/package.json
+++ b/package.json
@@ -3,18 +3,20 @@
   "version": "1.0.0",
   "main": "server.js",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
     "connect-timeout": "^1.9.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "express-ejs-layouts": "^2.5.1",
     "method-override": "^3.0.0",
-    "mongoose": "^6.0.12",
-    "multer": "^1.4.3"
+    "mongoose": "^6.0.13",
+    "multer": "^1.4.3",
+    "socket.io": "^4.4.0"
   },
   "devDependencies": {
     "dotenv": "^10.0.0",
-    "nodemon": "^2.0.14"
+    "nodemon": "^2.0.15"
   },
   "scripts": {
     "start": "node server.js",
