--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "method-override": "^3.0.0",
     "mongoose": "^6.0.13",
     "multer": "^1.4.3",
-    "socket.io": "^4.4.0"
+    "socket.io": "^4.4.0",
+    "throng": "^5.0.0"
   },
   "devDependencies": {
     "dotenv": "^10.0.0",
